--- a/simple-heroku-webapp/.project
+++ b/simple-heroku-webapp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>simple-heroku-webapp</name>
+	<name>readify-test-webapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
