--- a/simple-heroku-webapp/pom.xml
+++ b/simple-heroku-webapp/pom.xml
@@ -3,11 +3,11 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example</groupId>
-    <artifactId>simple-heroku-webapp</artifactId>
+    <groupId>com.readify.test</groupId>
+    <artifactId>readify-test-webapp</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>simple-heroku-webapp</name>
+    <name>readify-test-webapp</name>
 
     <dependencyManagement>
         <dependencies>
@@ -59,7 +59,7 @@
     </dependencies>
 
     <build>
-        <finalName>simple-heroku-webapp</finalName>
+        <finalName>readify-test-webapp</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
